--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --gray-light: #f3f3f3;
+  --gray-dark: #d7d7d7;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,13 +15,9 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+html, body {
+  min-width: 100%;
+  min-height: 100vh;
 }
 
 body {
@@ -39,7 +36,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 10px;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -47,12 +44,14 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.mantine-1xk8bhn {
+  padding: 2px 15px;
 }
 
 @media (prefers-color-scheme: light) {
