--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,6 @@ html, body {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -51,7 +49,22 @@ button:focus-visible {
 }
 
 .mantine-1xk8bhn {
-  padding: 2px 15px;
+  padding: 2px 10px;
+}
+
+.mantine-UnstyledButton-root {
+  padding: 0 18px;
+}
+
+.mantine-1b713nm:disabled, 
+.mantine-1b713nm[data-disabled], 
+.mantine-zoca1y:disabled, 
+.mantine-zoca1y[data-disabled] {
+  background-color: transparent;
+  opacity: 1;
+  border: none;
+  color: #000;
+  cursor: auto;
 }
 
 @media (prefers-color-scheme: light) {
@@ -64,5 +77,11 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media (max-width: 768px) {
+  .mantine-UnstyledButton-root {
+    padding: 0 10px;
   }
 }
